[workspace]
members = [
  "xtask",
  "mightybuga_bsc",
  "libs/logging",
  "libs/engine",
  "libs/timer_based_buzzer_interface",
  "libs/hal_button",
  "libs/hal_encoder_stm32f1xx",
  "apps/hello_world",
  "apps/line_follower",
]

resolver = "2"


[profile.release]
lto = true # better optimizations

[profile.release.package.mightybuga_bsc]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
#lto = true # better optimizations. Link Time Optimization cannot be configured per package.
