[workspace]
members = [
  "xtask",
  "mightybuga_bsc",
  "libs/logging",
  "libs/engine",
  "libs/timer_based_buzzer_interface",
  "libs/hal_button",
  "libs/hal_encoder_stm32f1xx",
  "apps/hello_world",
  "apps/line_follower",
]

resolver = "2"


[profile.release]
lto = true # Enables full Link Time Optimization for the entire project. Better optimizations

[profile.dev.package.mightybuga_bsc]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test.package.mightybuga_bsc]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release.package.mightybuga_bsc]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
#lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench.package.mightybuga_bsc]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
#lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
