[package]
name = "mightybuga_bsc"
version = "0.1.0"
authors = ["Jorge Muñoz <punkto@gmail.com>"]
description = "Base binary crate for the MightyBugA based on STM32F103 Blue Pill boards"
categories = ["embedded", "no-std"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103", "medium"] }
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"

timer_based_buzzer_interface = { path = "../libs/timer_based_buzzer_interface/" }

fugit = "0.3.7"

nb = "1.1.0"

engine = { path = "../libs/engine/" }
hal_button = { path = "../libs/hal_button" }
hal-encoder-stm32f1xx = { path = "../libs/hal_encoder_stm32f1xx" }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
