[package]
name = "hello_world"
version = "0.1.0"
authors = ["Jorge Muñoz <punkto@gmail.com>"]
description = "Basic app that uses libs and BSC to print something and make demos"
categories = ["embedded", "no-std"]
edition = "2021"

[dependencies]
mightybuga_bsc = { path = "../../mightybuga_bsc" }
nb = "1.1.0"

embedded-alloc = "0.6.0"

logging = { path = "../../libs/logging" }
engine = { path = "../../libs/engine" }
light_sensor_array_controller = { path = "../../libs/light_sensor_array_controller" }
battery_sensor_controller = { path = "../../libs/battery_sensor_controller" }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
