[package]
name = "line_follower"
version = "0.1.0"
authors = ["Jorge Muñoz <punkto@gmail.com>"]
description = "Line follower application"
categories = ["embedded", "no-std"]
edition = "2021"

[dependencies]
mightybuga_bsc = { path = "../../mightybuga_bsc" }
panic-halt = "0.2.0"
nb = "1.1.0"

embedded-alloc = "0.5.1"

logging = { path = "../../libs/logging" }
engine = { path = "../../libs/engine" }
battery_sensor_controller = { path = "../../libs/battery_sensor_controller" }
light_sensor_array_controller = { path = "../../libs/light_sensor_array_controller" }
hal_button = { path = "../../libs/hal_button" }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
